=========== Version 2.8.1

Configure has a new option:
	--with-pbsdir=PATH

If set it will use PATH specified as argument to
find the pbs/torque libraries. If unset it will use
some useful defaults to find the libaries.

Suggested by: Troy Baer


=========== Version 2.8.0

setup.py:
	- Added /usr/lib to PBS_LIB_DIR

pbs.py:
	- Added new function "pbs.error()". This function checks if 
	  an error has occured with a pbs function, eg:
	    task_id = pbs.pbs_submit(c, attrl, "A.tsk", 'NULL', 'NULL')
	    error_number, err_txt = pbs.error()
	    if error_number:
	   	print error_number, err_txt

          prints the following message if script A.tsk does not exists:
	    15042 (qsub) cannot access script file

pbs_python.spec:
	- to make rpm packages from the source package, initial version
	Author: Martin Pels from SARA

README:
	- Now requires python 2.1 and higher
	- Explain how to build DEBIAN package

=========== Version 2.7.10

PBSQuery.py:
	Fixed an error. You always got all resources from eg nodes
	even when you supplied an attribute list where you only
	requested the 'state' of the node.

	Updated the inline python documentation

=========== Version 2.7.9

Fixed an error the previous version was in DEBUG mode. So
you get an lot undesired output on the screen.

debian package now also generated a package with the write 
version info.

=========== Version 2.7.8

Setup.py:
	Can also handle ROCKS installations + the version
	info is now the same as pbs.py
	Thanks to: Roy Dragseth

=========== Version 2.7.7

PBSQuery module: 
  It can now be used in daemon programs. The pbs_server closes
  the connection after an certain amount of time. This is fixed,
  before every query there is an new connection and if the query 
  is finished the connection is closed.
  
=========== Version 2.7.6

Now setup.py can also handle old Oscar Installations. 
Thanks To: Robin Humble

Fixed an print statement fix in new_interface.py:
Thanks To: Robin Humble
